implement searchbar function

--- a/src/pages/dataStudio.astro
+++ b/src/pages/dataStudio.astro
@@ -5,5 +5,5 @@ import BasicLayout from "../global/layouts/BasicLayout.astro";
 ---
 
 <BasicLayout>
-    <DataStudioPage client:load />
+    <DataStudioPage client:only />
 </BasicLayout>
