--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,5 +4,5 @@ import BasicLayout from "../global/layouts/BasicLayout.astro"
 ---
 
 <BasicLayout>
-	<PatientPage client:load />
+	<PatientPage client:only />
 </BasicLayout>
