--- a/src/pages/patientLogin.astro
+++ b/src/pages/patientLogin.astro
@@ -3,6 +3,6 @@ import BasicLayout from "../global/layouts/BasicLayout.astro"
 import { CheckPatientIdentityPage } from "../reactPages/CheckPatientIdentity"
 ---
 
-<BasicLayout>
+<BasicLayout title="確認您的身分">
     <CheckPatientIdentityPage client:only />
 </BasicLayout>
