--- a/src/pages/questionnaires.astro
+++ b/src/pages/questionnaires.astro
@@ -3,6 +3,6 @@ import BasicLayout from "../global/layouts/BasicLayout.astro"
 import { QuestionnairesPage } from "../reactPages/questionnaire"
 ---
 
-<BasicLayout>
+<BasicLayout title="問卷">
     <QuestionnairesPage client:only />
 </BasicLayout>
