--- a/src/pages/thanks.astro
+++ b/src/pages/thanks.astro
@@ -2,7 +2,7 @@
 import BasicLayout from "../global/layouts/BasicLayout.astro"
 ---
 
-<BasicLayout>
+<BasicLayout title="感謝">
     <div class="flex justify-center items-center h-screen">
         <div>
             <div class="text-2xl">您已完成問卷的填答，感謝您的用心作答 ^_^</div>
